<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imv_moon_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/moon_image"
        app:layout_constraintBottom_toTopOf="@id/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/btn_google"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="-150dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="createSocialAlert">

        <ImageView
            android:id="@+id/imv_google_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/google_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_google_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/google"
            android:textColor="@color/google_button_text_color"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_facebook"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_facebook"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google"
        android:onClick="createSocialAlert">

        <ImageView
            android:id="@+id/imv_facebook_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/facebook_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_facebook_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/facebook"
            android:textColor="@color/facebook_button_text_color"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_twitter"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_twitter"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_facebook"
        android:onClick="createSocialAlert">

        <ImageView
            android:id="@+id/imv_twitter_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/twitter_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_twitter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/twitter"
            android:textColor="@color/twitter_button_text_color"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_email"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_twitter"
        android:onClick="createSocialAlert">

        <ImageView
            android:id="@+id/imv_email_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/email_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/email"
            android:textColor="@color/email_button_text_color"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_phone"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_phone"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_email"
        android:onClick="createSocialAlert" >

        <ImageView
            android:id="@+id/imv_phone_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/phone_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/phone"
            android:textColor="@color/phone_button_text_color"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>